@@ -1,3 +1,8 @@
+Mon Mar 30 14:42:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (fileattr_to_unixmode, winnt_lstat): deal with
+	  symbolic link than directory, and set executable bits.
+
 Mon Mar 30 11:27:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (copy_stream_body): use the arguments without conversion if
